# acts-kernel-agent

./: .gitignore  CLAUDE.md  INSIGHTS.md  JOURNAL.md  PRD.md  PROCESS.md  pyproject.toml
doc/: README.md  actions.md  agents.md  config.md  eval.md  kernels.md  llm_backend.md  memory.md  pipeline.md  runtime.md  search.md
src/: __init__.py  config.py
src/actions/: __init__.py  registry.py  tier1_sizing.py  tier2_memory.py  tier3_compute.py  tier4_advanced.py  tier5_arch.py  tier6_specific.py
src/agents/: __init__.py  coder.py  evaluator.py  llm_backend.py  planner.py  reviewer.py  trace_processor.py
src/benchmark/: __init__.py  baseline_generator.py  problem.py  problem_loader.py  roofline_shapes.py  solar_adapter.py  solution_formatter.py  workload_selector.py
src/eval/: __init__.py  _profiler_driver.py  anti_cheat.py  benchmark.py  correctness.py  inputs.py  profiler.py  roofline.py  scorer.py  types.py
src/kernels/: __init__.py  compiler.py  kernel.py
src/memory/: __init__.py  experience.py  retriever.py  store.py
src/pipeline/: __init__.py  optimize.py  report.py  verify.py
src/search/: beam.py  (+3 more)
tests/: conftest.py  test_actions.py  test_baseline_generator.py  test_benchmark.py  test_coder.py  test_compiler.py  test_config.py  test_correctness.py  test_events.py  test_inputs.py  test_llm_backend.py  test_memory.py  test_orchestrator_events.py  test_orchestrator_profiling.py  test_pipeline_optimize.py  test_planner.py  test_problem_loader.py  test_problem_roofline.py  test_profiler_analytical.py  test_profiler_cache.py  test_profiler_csv.py  test_profiler_gpu.py  test_profiler_subprocess.py  test_report.py  test_reviewer.py  test_roofline.py  test_run_context.py  test_scorer.py  test_search.py  test_solution_formatter.py  test_trace_processor.py  test_verify.py  test_workload_selector.py
(+17 files in other folders)
