[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acts-kernel-agent"
version = "0.1.0"
description = "LLM-driven GPU kernel optimization via tree search, multi-agent coordination, and persistent optimization memory"
requires-python = ">=3.10"
dependencies = [
    "triton>=2.2.0",
    "torch>=2.1.0",
    "openai-agents>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
# SOL-ExecBench integration. Installed from repo/benchmark/SOL-ExecBench
# in dev. Provides Definition / Workload / ToleranceSpec schemas,
# gen_inputs, and compute_error_stats used by the correctness gate.
# Kept optional because SOL requires Python 3.12+ / torch 2.10+, which
# exceeds this project's declared requires-python and torch floors —
# correctness.py falls back to a local torch.allclose path when absent.
sol = [
    "sol-execbench>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
